# Safe_web_space

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
db/: models.py
models/: model_class.pth  model_tone.pth
src/: __init__.py  comment_parsers.py  config.py  main.py
src/algorithms/: tone.py
src/db/: models.py
src/pages/: analyzed_data_page.py  data_source_page.py  database_page.py  loading_page.py  settings_page.py  tone_page.py
